# natural-arithmetic

./: CHANGELOG.md  natural-arithmetic.cabal
.github/workflows/: build.yaml
src/Arithmetic/: Equal.hs  Fin.hs  Lt.hs  Lte.hs  Nat.hs  Plus.hs  Types.hs  Unsafe.hs
