cabal-version: 2.2
name: natural-arithmetic
version: 0.1.0.0
synopsis: Arithmetic of natural numbers
description:
  A search for terms like `arithmetic` and `natural` on hackage reveals
  no shortage of libraries for handling the arithmetic of natural
  numbers. How is this library any different some of the others? It has
  a particular purpose: providing a foundation on top on which other
  libraries may define types indexed by sizes. This uses GHC's
  non-inductively-defined `GHC.TypeNats.Nat`. As a rule, this does not
  use `unsafeCoerce` internally anywhere.
bug-reports: https://github.com/andrewthad/natural-arithmetic
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Math
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Arithmetic.Equal
    Arithmetic.Lt
    Arithmetic.Lte
    Arithmetic.Nat
    Arithmetic.Types
    Arithmetic.Unsafe
    Arithmetic.Plus
  build-depends: base>=4.12 && <5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
